proxy setup shenanigans (#30)
