# src/main/resources/swagger/api-docs.yaml
@@ -49,7 +49,7 @@ paths:
         - test
       security: [] # no security
 
-  '/googleproject':
+  '/api/googleproject':
     get:
       summary: Request a clean Google project
       responses:
@@ -70,7 +70,7 @@ paths:
           - email
           - profile
 
-  '/googleproject/{projectName}':
+  '/api/googleproject/{projectName}':
       get:
         summary: Release a Google project
         parameters:
